--- a/essai/bonprocess.html
+++ b/essai/bonprocess.html
@@ -19,11 +19,11 @@
         <div class="carrousel">
             <button class="arrow left-arrow prev" onclick="prevSlide()">&#10094;</button>
             <div class="slides">
-                <div class="slide text-animation"> <span>D</span>ecouvrer nos offres diverses en tout genre <a href="#">Decouvrez &#10095;</a></div>
+                <div class="slide text-animation"> <span>D</span>ecouvrer nos offres diverses en tout genre <a href="#" class="fl">Decouvrez &#10095;</a></div>
                 <div class="slide text-animation"> <span>D</span>ecouvrer nos Formations en informatique,Marketing, crypto et autres..<a href="#">Decouvrez &#10095;</a></div>
-                <div class="slide text-animation"><span>J</span>ettez un oeil a nos articles electroniques <a href="#">Decouvrez &#10095;</a></div>
-                <div class="slide text-animation">Vous aimez la etre a la pointe de la technologie </br> vous etes au bon endroit <a href="#">Decouvrez &#10095;</a></div>
-                <div class="slide text-animation"> Reparer vos outils et gadgets electroniques depannez vos appareils <a href="#">Decouvrez &#10095;</a> </div>
+                <div class="slide text-animation"><span>J</span>ettez un oeil a nos articles electroniques <a href="#" class="fl">Decouvrez &#10095;</a></div>
+                <div class="slide text-animation">Vous aimez la etre a la pointe de la technologie </br> vous etes au bon endroit <a href="#" class="fl">Decouvrez &#10095;</a></div>
+                <div class="slide text-animation"> Reparer vos outils et gadgets electroniques depannez vos appareils <a href="#" class="fl">Decouvrez &#10095;</a> </div>
             </div>
             
                 <button class="arrow right-arrow next" onclick="nextSlide()">&#10095;</button>
