--- a/essai/test.html
+++ b/essai/test.html
@@ -1,76 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer avec Réseaux Sociaux</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f8f9fa;
-    padding: 20px 0;
-}
-
-.social-icons {
-    display: flex;
-    position: relative;
-}
-
-.icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #007bff; /* Couleur de fond */
-    color: white;
-    margin: 0 10px;
-    text-decoration: none;
-    transition: background-color 0.3s;
-}
-
-.icon:hover {
-    background-color: #0056b3; /* Couleur au survol */
-}
-
-.tooltip {
-    position: absolute;
-    bottom: 70px; /* Position de la bulle */
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: black;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.icon:hover + .tooltip {
-    opacity: 1; /* Afficher la bulle au survol */
-}
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <title>Mon Projet Bootstrap</title>
 </head>
+
 <body>
-    <footer class="footer">
-        <div class="social-icons">
-            <a href="#" class="icon" data-name="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="icon" data-name="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="icon" data-name="TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="#" class="icon" data-name="Gmail"><i class="fas fa-envelope"></i></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
+        <a class="navbar-brand" href="#">Mon Site</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">À propos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                </li>
+            </ul>
         </div>
-        <div class="tooltip"></div>
-    </footer>
-    <script src="script1.js"></script>
+    </nav>
 </body>
+
 </html>
